# sbe201-2019-final-project-sbe201-2021-team02

./: CMakeLists.txt  README.md  coding  decode  huffman.hpp  huffmanCoding  huffmanCoding.cpp  huffmanDecoding.cpp
apps/: test_huffman_code.cpp  test_huffman_decode.cpp
decoded/: decoded.txt
encoded/: encoded.txt
include/: huffman_code.hpp  huffman_decode.hpp
